test/TestPhases/typechecker/valid/boolleanCall2.blc
module


activity other (i: bool)()
    await false
end

activity empty ()()
    var x: bool = false

    x = x or true
    run other(x)
    
end
