test/TestPhases/typechecker/invalid/booleanCallX1.blc
module


activity other (i: bool)()
    await i
end

activity empty ()()
    var x: int32 = 7

    x = x or true
    run other(x)
        
end
